--- a/index.html
+++ b/index.html
@@ -60,12 +60,12 @@
               </p>
 
             <div class="mt-6 space-y-6">
-              <h2 class="font-bold text-xl">Donate for Flood at Noakhali, Bangladesh</h2>
+              <h2 id="title" class="font-bold text-xl">Donate for Flood at Noakhali, Bangladesh</h2>
               <p class="font-normal text-[#111111B3]">
                 The recent floods in Noakhali have caused significant damage to homes  infrastructure. Your donation will help provide essential supplies and  to those affected by this disaster. Every contribution, big or small, makes  difference. Please join us in supporting the relief efforts and making a positive impact on the lives of those in need.
               </p>
               <input id="donate_input" class="w-full border border-[#1111111a] rounded-lg p-4" type="text" placeholder="Write Donate Amount" />
-              <button id="handel_donate" onclick="my_modal_1.showModal()" class="btn bg-common w-full font-semibold text-lg">Donate Now</button>
+              <button id="handel_donate" onclick="handelDonate(this)" class="btn bg-common w-full font-semibold text-lg">Donate Now</button>
               <!-- Modal start -->
               <!-- Open the modal using ID.showModal() method -->
               <dialog id="my_modal_1" class="modal">
@@ -99,7 +99,7 @@
               </p>
 
             <div class="mt-6 space-y-6">
-              <h2 class="font-bold text-xl">Donate for Flood at Noakhali, Bangladesh</h2>
+              <h2 id="title" class="font-bold text-xl">Donate for Flood at Noakhali, Bangladesh</h2>
               <p class="font-normal text-[#111111B3]">
                 The recent floods in Noakhali have caused significant damage to homes  infrastructure. Your donation will help provide essential supplies and  to those affected by this disaster. Every contribution, big or small, makes  difference. Please join us in supporting the relief efforts and making a positive impact on the lives of those in need.
               </p>
@@ -121,7 +121,7 @@
               </p>
 
             <div class="mt-6 space-y-6">
-              <h2 class="font-bold text-xl">Donate for Flood at Noakhali, Bangladesh</h2>
+              <h2 id="title" class="font-bold text-xl">Donate for Flood at Noakhali, Bangladesh</h2>
               <p class="font-normal text-[#111111B3]">
                 The recent floods in Noakhali have caused significant damage to homes  infrastructure. Your donation will help provide essential supplies and  to those affected by this disaster. Every contribution, big or small, makes  difference. Please join us in supporting the relief efforts and making a positive impact on the lives of those in need.
               </p>
