--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
             <button id="donate_btn" onclick="openTab('donate_section')" class="btn text-lg font-semibold px-7 border border-[#1111111a]">Donate</button>
             <button id="history_btn" onclick="openTab('history_section')" class="btn text-lg font-semibold px-7 border border-[#1111111a]">History</button>
         </div>
-        <p id="demo"></p>
     </header>
 
 
     <main>
+      <!-- Donate secton start -->
         <section id="donate_section" class="tab_section space-y-12">
           <!-- Card -1 start -->
           <div class="lg:flex justify-between p-6 gap-x-8 border border-[#1111111a]">
@@ -132,12 +132,13 @@
           </div>
           <!-- Card -3 end -->
         </section>
+        <!-- Donate secton end -->
 
-        <section id="history_section" class="lg:pt-12 h-[17.7rem] tab_section">
-          <div class="p-6 gap-x-8">
-            <h1 class="text-3xl font-bold text-purple-600">History</h1>
-          </div>
+        <!-- History secton start -->
+        <!-- h-[17.7rem] -->
+        <section id="history_section" class="lg:pt-12 space-y-6 tab_section">
         </section>
+        <!-- History secton end -->
     </main>
 
     <footer class="bg-[#F9F7F3] h-24 p-8 mt-16"></footer>
