added some fixed issu

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 The recent floods in Noakhali have caused significant damage to homes  infrastructure. Your donation will help provide essential supplies and  to those affected by this disaster. Every contribution, big or small, makes  difference. Please join us in supporting the relief efforts and making a positive impact on the lives of those in need.
               </p>
               <input id="donate_input" class="w-full border border-[#1111111a] rounded-lg p-4" type="text" placeholder="Write Donate Amount" />
-              <button id="handel_donate" onclick="handelDonate(this)" class="btn bg-common w-full font-semibold text-lg">Donate Now</button>
+              <button id="donation_btn1" class="btn bg-common w-full font-semibold text-lg">Donate Now</button>
               <!-- Modal start -->
               <!-- Open the modal using ID.showModal() method -->
               <dialog id="my_modal_1" class="modal">
@@ -94,17 +94,34 @@
             <div>
               <p class="btn single_amount">
                 <img src="./assets/coin.png" alt="coin" width="26px" height="26px" />
-                <span id="donate_amount">0</span>
+                <span id="donate_amount2">0</span>
                 <span>BDT</span>
               </p>
 
             <div class="mt-6 space-y-6">
-              <h2 id="title" class="font-bold text-xl">Donate for Flood at Noakhali, Bangladesh</h2>
+              <h2 id="title2" class="font-bold text-xl">Donate for Flood Relief in Feni,Bangladesh</h2>
               <p class="font-normal text-[#111111B3]">
                 The recent floods in Noakhali have caused significant damage to homes  infrastructure. Your donation will help provide essential supplies and  to those affected by this disaster. Every contribution, big or small, makes  difference. Please join us in supporting the relief efforts and making a positive impact on the lives of those in need.
               </p>
-              <input id="donate_input" class="w-full border border-[#1111111a] rounded-lg p-4" type="text" placeholder="Write Donate Amount" />
-              <button class="btn bg-common w-full font-semibold text-lg">Donate Now</button>
+              <input id="donate_input2" class="w-full border border-[#1111111a] rounded-lg p-4" type="text" placeholder="Write Donate Amount" />
+              <button id="donation_btn2" class="btn bg-common w-full font-semibold text-lg">Donate Now</button>
+              <!-- Modal start -->
+              <!-- Open the modal using ID.showModal() method -->
+              <dialog id="my_modal_2" class="modal">
+                <div class="modal-box text-center">
+                    <h3 class="font-bold text-4xl mt-2 mb-6">Congrates!</h3>
+                    <img class="mx-auto" src="./assets/coin.png" alt="coin" width="50px" />
+                    <p class="py-4 text-[#333333bf] font-normal text-xl mt-4">You Have Donated for Humankind</p>
+                    <h2 class="text-2xl font-bold">Successfully</h2>
+                    <div class="modal-action flex justify-center">
+                    <form method="dialog">
+                        <!-- the button close the modal -->
+                        <button id="modal_continue_btn" class="btn text-lg">close confirmation</button>
+                    </form>
+                    </div>
+                </div>
+                </dialog>
+                      <!-- Modal end -->
             </div>
               </div>
           </div>
@@ -116,23 +133,44 @@
             <div>
               <p class="btn single_amount">
                 <img src="./assets/coin.png" alt="coin" width="26px" height="26px" />
-                <span id="donate_amount">0</span>
+                <span id="donate_amount3">0</span>
                 <span>BDT</span>
               </p>
 
             <div class="mt-6 space-y-6">
-              <h2 id="title" class="font-bold text-xl">Donate for Flood at Noakhali, Bangladesh</h2>
+              <h2 id="title3" class="font-bold text-xl">Aid for Injured in the Quota Movement</h2>
               <p class="font-normal text-[#111111B3]">
                 The recent floods in Noakhali have caused significant damage to homes  infrastructure. Your donation will help provide essential supplies and  to those affected by this disaster. Every contribution, big or small, makes  difference. Please join us in supporting the relief efforts and making a positive impact on the lives of those in need.
               </p>
-              <input id="donate_input" class="w-full border border-[#1111111a] rounded-lg p-4" type="text" placeholder="Write Donate Amount" />
-              <button class="btn bg-common w-full font-semibold text-lg">Donate Now</button>
+              <input id="donate_input3" class="w-full border border-[#1111111a] rounded-lg p-4" type="text" placeholder="Write Donate Amount" />
+              <button id="donation_btn3" class="btn bg-common w-full font-semibold text-lg">Donate Now</button>
+              <!-- Modal start -->
+              <!-- Open the modal using ID.showModal() method -->
+              <dialog id="my_modal_3" class="modal">
+                <div class="modal-box text-center">
+                    <h3 class="font-bold text-4xl mt-2 mb-6">Congrates!</h3>
+                    <img class="mx-auto" src="./assets/coin.png" alt="coin" width="50px" />
+                    <p class="py-4 text-[#333333bf] font-normal text-xl mt-4">You Have Donated for Humankind</p>
+                    <h2 class="text-2xl font-bold">Successfully</h2>
+                    <div class="modal-action flex justify-center">
+                    <form method="dialog">
+                        <!-- the button close the modal -->
+                        <button id="modal_continue_btn" class="btn text-lg">close confirmation</button>
+                    </form>
+                    </div>
+                </div>
+                </dialog>
+                      <!-- Modal end -->
             </div>
               </div>
           </div>
           <!-- Card -3 end -->
         </section>
         <!-- Donate secton end -->
+
+
+
+
 
         <!-- History secton start -->
         <!-- h-[17.7rem] -->
