added dynamic history sectoin

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <div>
               <p class="btn single_amount">
                 <img src="./assets/coin.png" alt="coin" width="26px" height="26px" />
-                <span id="donate_amount">0</span>
+                <span id="donate_amount" class="donate_amount">0</span>
                 <span>BDT</span>
               </p>
 
@@ -94,7 +94,7 @@
             <div>
               <p class="btn single_amount">
                 <img src="./assets/coin.png" alt="coin" width="26px" height="26px" />
-                <span id="donate_amount2">0</span>
+                <span id="donate_amount2" class="donate_amount2">0</span>
                 <span>BDT</span>
               </p>
 
@@ -133,7 +133,7 @@
             <div>
               <p class="btn single_amount">
                 <img src="./assets/coin.png" alt="coin" width="26px" height="26px" />
-                <span id="donate_amount3">0</span>
+                <span id="donate_amount3" class="donate_amount3">0</span>
                 <span>BDT</span>
               </p>
 
