added page redirect issue

--- a/blog.html
+++ b/blog.html
@@ -28,7 +28,7 @@
 
     <header id="transparent">
         <nav id="nav_transparent" class="bg-[#F9F7F3] flex justify-between items-center px-6 py-4">
-            <a class="btn bg-common text-lg font-semibold" href="/">Home</a>
+            <a class="btn bg-common text-lg font-semibold" href="/donate">Home</a>
             <div class="flex justify-between items-center">
                 <img class="logo" src="./assets/logo.png" alt="Logo"/>
                 <span class="text-lg font-semibold ml-4 sm_screen">Donate Bangladesh</span>
